--- a/pfe-frontend/src/app/core/features/components/leave/leave-list/leave-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/leave/leave-list/leave-list.component.html
@@ -1,70 +1,104 @@
-<div class="space-y-4">
-  <div class="flex items-center justify-between">
-    <h2 class="text-2xl font-semibold text-gray-800">Leave Types</h2>
-    <button
-      pButton
-      type="button"
-      label="Add New Leave Type"
-      icon="pi pi-plus"
-      class="p-button-sm p-button-primary"
-      [routerLink]="'create'"
-    ></button>
+<div class="p-6">
+  <div class="max-w-[1600px] mx-auto">
+    <!-- Header Section -->
+    <div class="flex justify-between items-center mb-6">
+      <div>
+        <h2 class="text-2xl font-bold text-gray-800">Leave Types</h2>
+        <p class="text-gray-600 mt-1">Manage your organization's leave types</p>
+      </div>
+      <p-button
+        label="Create Leave Type"
+        icon="pi pi-plus"
+        (click)="onCreate()"
+        styleClass="p-button-primary">
+      </p-button>
+    </div>
+
+    <!-- Table Section -->
+    <p-card>
+      <p-table
+        [value]="leaveTypes"
+        [loading]="loading"
+        [paginator]="true"
+        [rows]="10"
+        [showCurrentPageReport]="true"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+        [rowsPerPageOptions]="[10, 25, 50]"
+        styleClass="p-datatable-sm"
+        [globalFilterFields]="['name', 'description']">
+        
+        <ng-template pTemplate="caption">
+          <div class="flex justify-between items-center">
+            <span class="p-input-icon-left">
+              <i class="pi pi-search"></i>
+              <input
+                pInputText
+                type="text"
+                (input)="applyFilterGlobal($event, 'contains')"
+                placeholder="Search leave types..."
+                class="p-inputtext-sm" />
+            </span>
+          </div>
+        </ng-template>
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th pSortableColumn="name" style="width: 25%">Name <p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="description" style="width: 35%">Description <p-sortIcon field="description"></p-sortIcon></th>
+            <th pSortableColumn="max_days" style="width: 15%">Max Days <p-sortIcon field="max_days"></p-sortIcon></th>
+            <th pSortableColumn="requires_approval" style="width: 15%">Requires Approval <p-sortIcon field="requires_approval"></p-sortIcon></th>
+            <th style="width: 10%">Actions</th>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-leaveType>
+          <tr>
+            <td>{{ leaveType.name }}</td>
+            <td>{{ leaveType.description }}</td>
+            <td>{{ leaveType.max_days }}</td>
+            <td>
+              <p-tag
+                [severity]="leaveType.requires_approval ? 'warning' : 'success'"
+                [value]="leaveType.requires_approval ? 'Yes' : 'No'">
+              </p-tag>
+            </td>
+            <td>
+              <div class="flex gap-2">
+                <button
+                  pButton
+                  icon="pi pi-pencil"
+                  class="p-button-rounded p-button-text p-button-sm"
+                  (click)="onEdit(leaveType)"
+                  pTooltip="Edit"
+                  tooltipPosition="top">
+                </button>
+                <button
+                  pButton
+                  icon="pi pi-trash"
+                  class="p-button-rounded p-button-text p-button-danger p-button-sm"
+                  (click)="onDelete(leaveType)"
+                  pTooltip="Delete"
+                  tooltipPosition="top">
+                </button>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="5" class="text-center p-4">
+              <div class="flex flex-col items-center justify-center text-gray-500">
+                <i class="pi pi-inbox text-4xl mb-2"></i>
+                <p>No leave types found</p>
+              </div>
+            </td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </p-card>
   </div>
-
-  <p-progressSpinner *ngIf="loading" styleClass="w-8 h-8"></p-progressSpinner>
-  <p-message *ngIf="error" severity="error" text="{{ error }}"></p-message>
-
-  <p-table
-    *ngIf="!loading && !error"
-    [value]="leaveTypes"
-    [paginator]="true"
-    [rows]="10"
-    [rowsPerPageOptions]="[5, 10, 20]"
-    [responsiveLayout]="'scroll'"
-    [sortMode]="'multiple'"
-    class="p-datatable-sm"
-  >
-    <ng-template pTemplate="header">
-      <tr>
-        <th pSortableColumn="id">ID <p-sortIcon field="id"></p-sortIcon></th>
-        <th pSortableColumn="name">Name <p-sortIcon field="name"></p-sortIcon></th>
-        <th pSortableColumn="description">Description <p-sortIcon field="description"></p-sortIcon></th>
-        <th pSortableColumn="daysAllowed">Days Allowed <p-sortIcon field="daysAllowed"></p-sortIcon></th>
-        <th pSortableColumn="isPaid">Paid Status <p-sortIcon field="isPaid"></p-sortIcon></th>
-        <th>Actions</th>
-      </tr>
-    </ng-template>
-
-    <ng-template pTemplate="body" let-leaveType>
-      <tr>
-        <td>{{ leaveType.id }}</td>
-        <td>{{ leaveType.name }}</td>
-        <td>{{ leaveType.description }}</td>
-        <td>{{ leaveType.daysAllowed }}</td>
-        <td>{{ getPaidStatus(leaveType.isPaid) }}</td>
-        <td class="flex gap-2">
-          <button
-            pButton
-            type="button"
-            icon="pi pi-pencil"
-            class="p-button-sm p-button-text text-blue-600"
-            (click)="navigateToEdit(leaveType.id)"
-          ></button>
-          <button
-            pButton
-            type="button"
-            icon="pi pi-trash"
-            class="p-button-sm p-button-text text-red-600"
-            (click)="confirmDelete(leaveType)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
-
-  <p-message
-    *ngIf="!loading && leaveTypes.length === 0"
-    severity="info"
-    text="No leave types found"
-  ></p-message>
 </div>
+
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
