--- a/pfe-frontend/src/app/core/features/components/leave/leave-list/leave-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/leave/leave-list/leave-list.component.html
@@ -43,10 +43,11 @@
 
         <ng-template pTemplate="header">
           <tr>
-            <th pSortableColumn="name" style="width: 25%">Name <p-sortIcon field="name"></p-sortIcon></th>
-            <th pSortableColumn="description" style="width: 35%">Description <p-sortIcon field="description"></p-sortIcon></th>
-            <th pSortableColumn="max_days" style="width: 15%">Max Days <p-sortIcon field="max_days"></p-sortIcon></th>
-            <th pSortableColumn="requires_approval" style="width: 15%">Requires Approval <p-sortIcon field="requires_approval"></p-sortIcon></th>
+            <th pSortableColumn="name" style="width: 20%">Name <p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="description" style="width: 25%">Description <p-sortIcon field="description"></p-sortIcon></th>
+            <th pSortableColumn="daysAllowed" style="width: 15%">Days Allowed <p-sortIcon field="daysAllowed"></p-sortIcon></th>
+            <th style="width: 15%">Paid Leave</th>
+            <th style="width: 15%">Carry Over</th>
             <th style="width: 10%">Actions</th>
           </tr>
         </ng-template>
@@ -55,12 +56,23 @@
           <tr>
             <td>{{ leaveType.name }}</td>
             <td>{{ leaveType.description }}</td>
-            <td>{{ leaveType.max_days }}</td>
+            <td>{{ leaveType.daysAllowed }}</td>
             <td>
               <p-tag
-                [severity]="leaveType.requires_approval ? 'warning' : 'success'"
-                [value]="leaveType.requires_approval ? 'Yes' : 'No'">
+                [severity]="leaveType.isPaid ? 'success' : 'warning'"
+                [value]="leaveType.isPaid ? 'Yes' : 'No'">
               </p-tag>
+            </td>
+            <td>
+              <div class="flex flex-col gap-1">
+                <p-tag
+                  [severity]="leaveType.carryOver ? 'success' : 'warning'"
+                  [value]="leaveType.carryOver ? 'Yes' : 'No'">
+                </p-tag>
+                <small *ngIf="leaveType.carryOver" class="text-gray-500">
+                  Max: {{ leaveType.maxCarryOver }} days
+                </small>
+              </div>
             </td>
             <td>
               <div class="flex gap-2">
@@ -87,7 +99,7 @@
 
         <ng-template pTemplate="emptymessage">
           <tr>
-            <td colspan="5" class="text-center p-4">
+            <td colspan="6" class="text-center p-4">
               <div class="flex flex-col items-center justify-center text-gray-500">
                 <i class="pi pi-inbox text-4xl mb-2"></i>
                 <p>No leave types found</p>
@@ -102,3 +114,4 @@
 
 <p-toast></p-toast>
 <p-confirmDialog></p-confirmDialog>
+
