--- a/pfe-frontend/src/app/core/features/components/roles/role-list/role-list.component.html
+++ b/pfe-frontend/src/app/core/features/components/roles/role-list/role-list.component.html
@@ -1,3 +1,6 @@
+<p-toast></p-toast>
+<p-confirmDialog></p-confirmDialog>
+
 <div class="space-y-4">
   <!-- Header with Title and Add Role Button -->
   <div class="flex items-center justify-between">
